--- a/app/globals.css
+++ b/app/globals.css
@@ -22,4 +22,17 @@
     overflow-x: hidden;
   }  
 
+
+.custom-scroll::-webkit-scrollbar {
+  width: 4px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #0499fd;
+  border-radius: 9999px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}  
   
